--- a/08div,span.html
+++ b/08div,span.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div>div标签独占一行</div>
     <div>div标签独占一行</div>
     <span>百度</span>
     <span>新浪</span>
     <span>搜狗</span>
+    <span>搜狗</span>
+    <span>搜狗</span>
 </body>
+
 </html>
