--- a/14超链接标签.html
+++ b/14超链接标签.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <a href="http://www.baidu.com" target="_blank">baidu</a>
     <a href="10相对路径和绝对路径.html" target="_blank">内部链接</a>
     <a href="#" target="_blank">空链接</a>
     <a href="123456.zip">下载链接</a>
     <a href="http://www.baidu.com"><img src="123456.png" alt=""></a>
-    
+    <a href="http://www.baidu.com"><img src="123456.png" alt=""></a>
+
 </body>
+
 </html>
